--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,7 +175,20 @@
   --animation-accordion-up: accordion-up 0.2s ease-out;
 }
 
+.bg-gradient-primary{
+  background: var(--gradient-primary);
+  background-clip: text;
+}
 
+.bg-gradient-hero{
+  background-color: var(--gradient-hero);
+  background-clip: text;
+}
+
+.bg-gradient-surface{
+  background-color: var(--gradient-surface);
+  background-clip: text;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
